# pa_backend

./: .env.example  .gitignore  README.md  Readme_Command.md  alembic.ini  check_db.py  docker-compose.yml  postman_collection.json  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_password_hash.py  003_add_is_global_and_seed_exercises.py  004_add_day_to_workouts.py  005_add_height_gender_to_profile.py  006_add_completed_at_to_sets.py  007_create_workout_logs.py  008_add_calories_est_to_workout_exercises.py  009_create_activity_logs.py
app/: calories.py  config.py  database.py  dependencies.py  main.py  security.py
app/models/: __init__.py  activity_log.py  base.py  exercise.py  set.py  user.py  workout.py  workout_log.py
app/routers/: activity_logs.py  auth.py  exercises.py  users.py  workout_logs.py  workouts.py
app/schemas/: activity_log.py  exercise.py  user.py  workout.py  workout_log.py
app/services/: activity_logger.py
